--- a/index.html
+++ b/index.html
@@ -1,46 +1,76 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <style>
-      @media screen and (max-width:500px) {
-          #container
-          {
-            display: flex;
-          }
-          .table
-          {
-            display: flex;
-            font-size: 14px;
-          }
-          .table thead tr th
-          {
-            /* display: none; */
-            padding: 2px;
-          }
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    @media screen and (max-width:500px) {
+      #container {
+        display: flex;
+        /* width: 50vh; */
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+        flex-direction: row;
       }
-    </style>
-    <title>Weather Nation</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Weather And Forecast</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+      .table {
+        display: flex;
+        font-size: 13px;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .table thead tr th {
+        /* display: none; */
+        padding: 2px;
+      }
+    }
+
+    @media screen and (max-width:380px) {
+      #tbody {
+        font-size: 3vw;
+        font-weight: 600;
+
+      }
+    }
+  </style>
+  <title>Weather Nation</title>
+</head>
+
+<body>
+  <div>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Weather And Forecast</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header bg-light">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Weather Nation</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link " aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">forecasts</a>
+                <a class="nav-link" href="#">Forecast</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -49,43 +79,46 @@
             </form>
           </div>
         </div>
-      </nav>
-      <div class="container">
-          <h1 class="head text-center my-3">Weather Your City Now</h1>
-          <hr>
-          <div class="mb-3">
-            <label for="cityName" class="form-label">Enter Your City Now</label>
-            <input type="text" class="form-control" id="cityName" placeholder="Enter a valid city name">
-          </div>
-          <button class="btn btn-primary" type="submit" id="submitBtn">Weather Now</button>
-          <hr>
       </div>
-      <hr>
-      <div class="container flex-row" id="container">
-        <table class="table">
-          <thead>
-            <tr>
-              <!-- <th scope="col">#</th> -->
-              <th scope="col">city Name</th>
-              <th scope="col">Country</th>
-              <th scope="col">Current Temperature &deg;C/F</th>
-              <th scope="col">condition</th>
-              <th scope="col">Feels be Like</th>
-            </tr>
-          </thead>
-          <tbody id="tbody">
-          </tbody>
-        </table>
-      </div>
+    </nav>
+  </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <div class="container">
+    <h1 class="head text-center my-3">Weather Your City Now</h1>
+    <hr>
+    <div class="mb-3">
+      <label for="cityName" class="form-label">Enter Your City Now</label>
+      <input type="text" class="form-control" id="cityName" placeholder="Enter a valid city name">
+    </div>
+    <button class="btn btn-primary" type="submit" id="submitBtn">Weather Now</button>
+    <hr>
+  </div>
+  <hr>
+  <div class="container flex-row" id="container">
+    <table class="table">
+      <thead>
+        <tr>
+          <!-- <th scope="col">#</th> -->
+          <th scope="col">Name</th>
+          <th scope="col">Country</th>
+          <th scope="col">Temperature &deg;C/F</th>
+          <th scope="col">condition</th>
+          <!-- <th scope="col">Feels be Like</th> -->
+        </tr>
+      </thead>
+      <tbody id="tbody">
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-    <script src="/index.js"></script>
-  </body>
+      </tbody>
+    </table>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <script src="/index.js"></script>
+</body>
+
 </html>
