--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </tr>
       </thead>
       <tbody id="tbody">
-
+          weather your city to view information
       </tbody>
     </table>
   </div>
