--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <link rel="shortcut icon" href="/weather.png" type="image/x-icon">
   <style>
     * {
       margin: 0;
@@ -88,10 +89,12 @@
     <h1 class="head text-center my-3">Weather Your City Now</h1>
     <hr>
     <div class="mb-3">
-      <label for="cityName" class="form-label">Enter Your City Now</label>
-      <input type="text" class="form-control" id="cityName" placeholder="Enter a valid city name">
+      <form action="">
+        <label for="cityName" class="form-label">Enter Your City Now</label>
+        <input type="text" class="form-control" id="cityName" placeholder="Enter a valid city name">
+        <button class="btn btn-primary my-3" type="submit" id="submitBtn">Weather Now</button>
+      </form>
     </div>
-    <button class="btn btn-primary" type="submit" id="submitBtn">Weather Now</button>
     <hr>
   </div>
   <hr>
