--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link rel="shortcut icon" href="/weather.png" type="image/x-icon">
+    <link rel="shortcut icon" href="weather.png" type="image/x-icon">
   <style>
     * {
       margin: 0;
@@ -120,7 +120,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 
-  <script src="/index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
